fix z-index + overflow

--- a/app/design/frontend/Devmy/nextouch/Magento_CatalogSearch/web/css/source/_module.less
+++ b/app/design/frontend/Devmy/nextouch/Magento_CatalogSearch/web/css/source/_module.less
@@ -66,6 +66,8 @@
             list-style: none;
             margin: 0;
             border-radius: 15px;
+            max-height: 80vh;
+            overflow-y: scroll;
 
             li {
                 font-size: 1.8rem;
