--- a/app/design/frontend/Devmy/nextouch/Magento_Theme/web/css/source/_module.less
+++ b/app/design/frontend/Devmy/nextouch/Magento_Theme/web/css/source/_module.less
@@ -181,7 +181,7 @@
                }
                .account-wrapper {
                    order: 11;
-                   z-index: 99;
+                   z-index: 98;
                }
                .toggle-nav {
                    order: 899
